# aegisone-core

./: .gitignore  ADVERSARIAL_AUDIT_REPORT.md  API_SURFACE.md  AUDIT_PROVENANCE_REPORT.md  BINARY_EXPERIMENT_REPRODUCIBILITY.md  CLAIM.md  FEEDBACK_CAPTURE.md  HOSTILE_REVIEW_PASS.md  IMPLEMENTATION_NOTES.private.md  LABELED_TEST_AND_BENCHMARK_CATALOG.md  LIVE_VALIDATION_PLAN.md  OPERATIONS_LAUNCH_CHECKLIST.md  OUTREACH_MESSAGE.md  PRIVATE_REBRAND_SUMMARY.md  README.md  RELEASE_CLEANUP_PLAN.md  REVIEW.md  REVIEWER_QUICKSTART.md  REVIEWER_TARGET_LIST.md  REVIEW_SPEC.md  SCOPED_POLICY_PROOF.md  START_HERE.md  VALIDATION_STATUS.md  codex_mnde_policy.json  confidentiality_verification_report.json  index.html  install.cmd  main.js  migration_audit_report.md  mnde-break.jmx  mnde-determinism.jmx  mnde-local-sidecar.mjs  mnde-run.cmd  mnde-run.mjs  mnde-run.ps1  mnde-stable.jmx  mnde-ui-static-server.mjs  mnde_git_wrapper.mjs  package-lock.json  package.json  (+11 more)
.codex/: config.toml
arm/: engine.ts  index.ts  types.ts
attack-wave-bundle/: attack_wave_results.json
audit/: controlled_benchmark.ts  emit_parity_vectors.ts  harness.ts  hyper_targeted_10m.ts  node_runtime.ts  run.ts  run_attack_wave.ts  run_hyper_targeted_10m.ps1  run_post_remediation_verification.ts  run_proof_expansion.ts  run_regression_guards.ts  test_helpers.ts  (+3 more)
audit-proof-bundle/: manifest.json  performance_report.json  schema_enforcement_report.json  summary.json
mnde-sidecar-ui/src-tauri/: Cargo.toml  tauri.conf.json
mnde-sidecar-ui/src-tauri/icons/: icon.icns
mnde-sidecar-ui/src-tauri/src/: main.rs
(+778 files in other folders)
